--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"devDependencies": {
 		"@iconify/svelte": "3.1.4",
 		"@sveltejs/adapter-netlify": "2.0.8",
+		"@sveltejs/adapter-vercel": "^5.8.2",
 		"@sveltejs/kit": "1.27.2",
 		"@types/nprogress": "0.2.2",
 		"autoprefixer": "10.4.16",
@@ -28,5 +29,10 @@
 		"tslib": "2.6.2",
 		"typescript": "5.2.2",
 		"vite": "4.5.0"
-	}
+	},
+	"trustedDependencies": [
+		"@sveltejs/kit",
+		"esbuild",
+		"svelte-preprocess"
+	]
 }
