--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,38 +10,13 @@ on:
 jobs:
     check:
         runs-on: ubuntu-latest
-
         steps:
-            - name: Checkout
-              uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+            - name: Checkout 🛒
+              uses: actions/checkout@v4
 
-            - name: Install Node.js
-              uses: actions/setup-node@v4
+            - name: Check Format 💅
+              uses: oven-sh/setup-bun@v2
               with:
-                  node-version: '18.x'
-
-            - uses: pnpm/action-setup@v2.4.0
-              name: Install pnpm
-              id: pnpm-install
-              with:
-                  version: 8
-                  run_install: false
-
-            - name: Get pnpm store directory
-              id: pnpm-cache
-              run: |
-                  echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
-
-            - uses: actions/cache@v3
-              name: Setup pnpm cache
-              with:
-                  path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
-                  key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-                  restore-keys: |
-                      ${{ runner.os }}-pnpm-store-
-
-            - name: Install dependencies
-              run: pnpm install
-
-            - name: Check format
-              run: pnpm lint
+                  bun-version: latest
+            - run: bun install
+            - run: bun run lint
